sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: not found: value n
  for (i <-1 to n-3){
                ^